--- a/src/assets/scss/utils/reset.scss
+++ b/src/assets/scss/utils/reset.scss
@@ -1,3 +1,5 @@
+@import 'utils/variables.scss';
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -84,6 +86,8 @@ time,
 mark,
 audio,
 video {
+  font-family: $font-stack-ko;
+  letter-spacing: -0.03rem;
   margin: 0;
   padding: 0;
   border: 0;
