--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -2,25 +2,52 @@
 // Color
 // ****************
 
+// theme
+$black: #000000;
+$black-gray: #444444;
 $white: #ffffff;
-$black: #222222;
-$white-gray: #f7f7f7;
-$gray: #717171;
+$white-gray: #dddddd;
+
+$gray: #666666;
+$dark-gray1: #676767;
+$dark-gray2: #9c9c9c;
+$light-gray1: #c8c8c8;
+$light-gray2: #cacaca;
+
+$orange: #f58220;
+$dark-orange: #f4933f;
+$light-orange: #ffcb9e;
+
+// from default
+$default-border: $white-gray;
+$default-text: $dark-gray1;
+
+// boxes
+$numberBox-dim-gray: $dark-gray2;
+$rankBox-dim-gray: $light-gray1;
+$rankBox-dim-orange: $light-orange;
+
+//background
+$wrapper-background: #fafafa;
+
+// nav, header...
+$timer-background: #efefef;
 
 // ****************
 // Font Size
 // ****************
-$font-size-base: 1rem; // 16px
+
+$font-size-base: 1.6rem; // 16px
 $font-size-1: $font-size-base * 1.25; // 20px
 $font-size-2: $font-size-base * 1.125; // 18px
 $font-size-3: $font-size-base * 1; // 16px
 $font-size-4: $font-size-base * 0.875; // 14px
 
-$h1-font-size: $font-size-base * 2;
-$h2-font-size: $font-size-base * 1.625;
-$h3-font-size: $font-size-base * 1.375;
-$h4-font-size: $font-size-base * 1.125;
-$h5-font-size: $font-size-base * 1;
+$h1-font-size: $font-size-base * 2.5; // 40px
+$h2-font-size: $font-size-base * 2.25; // 36px
+$h3-font-size: $font-size-base * 1.875; // 30px
+$h4-font-size: $font-size-base * 1.625; // 26px
+$h5-font-size: $font-size-base * 1.125; // 18px
 
 // ****************
 // Font Weight
@@ -36,8 +63,12 @@ $font-weight-bolder: bolder;
 // ****************
 // Font Stack
 // ****************
-$font-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+$font-stack-ko: 'Noto Sans CJK KR', -apple-system, BlinkMacSystemFont,
+  'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+  'Droid Sans', 'Helvetica Neue', sans-serif;
+$font-stack-en: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+  'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+  'Helvetica Neue', sans-serif;
 
 // ****************
 // Display width
