[ Feature ] textarea 생성

--- a/src/assets/scss/utils/_base.scss
+++ b/src/assets/scss/utils/_base.scss
@@ -105,10 +105,11 @@ input[type='text'] {
 
   border-width: 1px;
   border-style: solid;
-  border-color: $color-white;
+  border-color: $color-gray-4;
 
   background: $color-white;
   text-decoration: none;
   resize: none;
   line-height: 1.2;
+  outline: none;
 }
