--- a/src/assets/scss/commons/Button.scss
+++ b/src/assets/scss/commons/Button.scss
@@ -10,7 +10,8 @@
   &.orange {
     background-color: $color-orange-1;
     color: $color-black;
-    &:hover {
+    &:hover,
+    &.active {
       background-color: $color-orange-2;
     }
   }
@@ -18,7 +19,8 @@
     border-spacing: 0;
     border-style: solid;
     border-width: 1px;
-    &:hover {
+    &:hover,
+    &.active {
       border-color: $color-orange-1;
       color: $color-orange-1;
     }
@@ -26,7 +28,8 @@
   &.black {
     background-color: $color-gray-0;
     color: $color-gray-5;
-    &:hover {
+    &:hover,
+    &.active {
       background-color: $color-gray-1;
       color: $color-orange-2;
     }
