--- a/src/assets/scss/commons/TextWithArrow.scss
+++ b/src/assets/scss/commons/TextWithArrow.scss
@@ -9,7 +9,7 @@
     width: 1rem;
     height: 1rem;
     margin-right: 0.9rem;
-    padding-bottom: 0.3rem;
+    line-height: 1.5rem;
   }
   p {
     font-size: $font-size-4;
