--- a/src/assets/scss/elements/ingame/TopicCard.scss
+++ b/src/assets/scss/elements/ingame/TopicCard.scss
@@ -3,33 +3,33 @@
 .slider {
   &__box {
     &--card {
-      padding: 28px;
+      padding: 2.8rem;
 
       .title {
         position: relative;
-        width: 96px;
-        height: 96px;
+        width: 9.6rem;
+        height: 9.6rem;
         margin: 0 auto;
         border-radius: 10px;
         text-align: center;
-        line-height: 96px;
+        line-height: 9.6rem;
         font-weight: 700;
-        font-size: 50px;
+        font-size: 5rem;
         color: #f58220;
         box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.1);
 
         &--count {
           position: absolute;
-          bottom: -20px;
-          left: -20px;
+          bottom: -2rem;
+          left: -2rem;
           color: #9c9c9c;
           background: #444;
-          width: 42px;
-          height: 42px;
-          line-height: 42px;
+          width: 4.2rem;
+          height: 4.2rem;
+          line-height: 4.2rem;
           border-radius: 50%;
           font-weight: 700;
-          font-size: 14px;
+          font-size: 1.4rem;
           text-align: center;
 
           span {
