[ Refactor ] RankInfo 드래그 안되는 기능

--- a/src/assets/scss/elements/rank/RankInfo.scss
+++ b/src/assets/scss/elements/rank/RankInfo.scss
@@ -3,6 +3,11 @@
 .rankinfo {
   display: flex;
   align-items: flex-end;
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
   &__toprank {
     width: 7.4rem;
     margin-right: 2.4rem;
