[ Refactor ] Like 클릭기능 추가 및 커서 추가

--- a/src/assets/scss/elements/rank/RankInfo.scss
+++ b/src/assets/scss/elements/rank/RankInfo.scss
@@ -55,6 +55,7 @@
       }
     }
     .infolike {
+      cursor: pointer;
       display: flex;
       flex-direction: column;
       align-items: center;
