--- a/src/assets/scss/elements/nav/BarTimer.scss
+++ b/src/assets/scss/elements/nav/BarTimer.scss
@@ -3,7 +3,7 @@
 .bartimer {
   height: 0.8rem;
   width: 100%;
-  background-color: $timer-background;
+  background-color: $color-timer-background;
   .progresstime {
     width: 0;
     height: 0.8rem;
