[ Refactor ] Resultbox.scss,Wordbox.scss 파일 수정

--- a/src/assets/scss/commons/Wordbox.scss
+++ b/src/assets/scss/commons/Wordbox.scss
@@ -9,7 +9,7 @@
     margin-bottom: 0;
   }
   p {
-    &:first-child {
+    &:first-of-type {
       font-size: 2rem;
       font-weight: 700;
       color: $color-orange-1;
@@ -23,7 +23,7 @@
         background-color: $color-white;
       }
     }
-    &:last-child {
+    &:last-of-type {
       width: 100%;
       padding: 1.1rem 2rem;
       color: $color-gray-2;
