--- a/src/assets/scss/commons/Resultbox.scss
+++ b/src/assets/scss/commons/Resultbox.scss
@@ -11,8 +11,8 @@
 
   span {
     &:first-of-type {
-      font-size: 1.4rem;
-      font-weight: 700;
+      font-size: $font-size-4;
+      font-weight: $font-weight-bold;
     }
     &:last-of-type {
       font-size: 1.2rem;
