--- a/src/assets/scss/elements/ingame/RoundTimer.scss
+++ b/src/assets/scss/elements/ingame/RoundTimer.scss
@@ -5,23 +5,20 @@
     0% {
       opacity: 0%;
       transform: scale(0.5);
-      margin-top: 40px;
+      margin-top: 50px;
     }
-    18% {
+    5% {
+      margin-top: 10px;
+    }
+    10% {
       opacity: 100%;
       transform: scale(1);
-      margin-top: 10px;
     }
-
     30% {
-      margin-top: -15px;
-    }
-
-    40% {
-      margin-top: 10px;
+      margin-top: 0px;
     }
     50% {
-      margin-top: 0px;
+      margin-top: 20px;
     }
     70% {
       margin-top: 30px;
@@ -41,7 +38,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: 3.5s showTimer ease-in;
+  animation: 4s showTimer ease-in;
   animation-iteration-count: 1;
   transform: scale(0);
 
@@ -65,7 +62,7 @@
         transform: rotate(360deg);
       }
     }
-    animation: 3.5s defaultRotate ease-in;
+    animation: 4s defaultRotate ease-in;
 
     svg {
       width: 100%;
@@ -74,7 +71,7 @@
         width: 100%;
         height: 100%;
         fill: none;
-        stroke: #f3f3f3;
+        stroke: $color-white;
         stroke-width: 10;
         stroke-linecap: round;
 
@@ -94,7 +91,7 @@
             }
           }
           stroke: $color-orange-1;
-          animation: 5s drawStroke ease-in both;
+          animation: 4s drawStroke ease-in both;
         }
       }
     }
@@ -109,7 +106,7 @@
         transform: scale(0.95);
       }
       100% {
-        transform: rotate(100deg) scale(0.95);
+        transform: rotate(60deg) scale(0.95);
       }
     }
     position: absolute;
