--- a/src/assets/scss/elements/ingame/TopicCard.scss
+++ b/src/assets/scss/elements/ingame/TopicCard.scss
@@ -10,10 +10,10 @@
         width: 9.6rem;
         height: 9.6rem;
         margin: 0 auto;
-        border-radius: 10px;
+        border-radius: 1rem;
         text-align: center;
         line-height: 9.6rem;
-        font-weight: 700;
+        font-weight: $font-weight-bold;
         font-size: 5rem;
         color: $color-orange-1;
         box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
@@ -28,8 +28,8 @@
           height: 4.2rem;
           line-height: 4.2rem;
           border-radius: 50%;
-          font-weight: 700;
-          font-size: 1.4rem;
+          font-weight: $font-weight-bold;
+          font-size: $font-size-4;
           text-align: center;
 
           span {
