[ Feature ] Slider에 Count 기능 추가

--- a/src/assets/scss/layouts/ingame/Slider.scss
+++ b/src/assets/scss/layouts/ingame/Slider.scss
@@ -1,5 +1,11 @@
 @import 'utils/variables.scss';
 
+.slider-wrap {
+  width: 38rem;
+  overflow: hidden;
+}
+
 .slider {
   display: flex;
+  border-radius: 3rem;
 }
