--- a/src/assets/scss/layouts/ingame/SliderBox.scss
+++ b/src/assets/scss/layouts/ingame/SliderBox.scss
@@ -1,9 +1,14 @@
 @import 'utils/variables.scss';
 
 .slider__box {
-  min-width: 30rem;
-  margin: 2.6rem;
-  box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.1);
+  flex: 1;
+  min-width: 34rem;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.06);
+  border-radius: 30px;
+
   &--text {
     display: flex;
     justify-content: center;
@@ -12,7 +17,7 @@
     textarea {
       display: block;
       width: 100%;
-      min-height: 4.5rem;
+      min-height: 8rem;
       border-radius: 5px;
     }
   }
