[ Style ] 12px 변수 추가 및 수정

--- a/src/assets/scss/commons/Wordbox.scss
+++ b/src/assets/scss/commons/Wordbox.scss
@@ -28,7 +28,7 @@
       padding: 1.1rem 2rem;
       color: $color-gray-2;
       background-color: $color-gray-6;
-      font-size: 1.2rem;
+      font-size: $font-size-5;
     }
   }
 }
