--- a/src/assets/scss/commons/Resultbox.scss
+++ b/src/assets/scss/commons/Resultbox.scss
@@ -15,7 +15,7 @@
       font-weight: $font-weight-bold;
     }
     &:last-of-type {
-      font-size: 1.2rem;
+      font-size: $font-size-5;
       margin-top: 0.7rem;
     }
   }
