--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -46,6 +46,7 @@ $font-size-1: $font-size-base * 1.25; // 20px
 $font-size-2: $font-size-base * 1.125; // 18px
 $font-size-3: $font-size-base * 1; // 16px
 $font-size-4: $font-size-base * 0.875; // 14px
+$font-size-5: $font-size-base * 0.75; // 12px
 
 $h1-font-size: $font-size-base * 2.5; // 40px
 $h2-font-size: $font-size-base * 2.25; // 36px
