[ Fix ] Textarea 수정사항 적용

--- a/src/assets/scss/commons/Textarea.scss
+++ b/src/assets/scss/commons/Textarea.scss
@@ -1,6 +1,8 @@
 @import 'utils/variables.scss';
 
 .textarea {
+  display: block;
+  border-radius: 5px;
   &:hover {
     border-color: $color-orange-1;
   }
