--- a/src/assets/scss/utils/_base.scss
+++ b/src/assets/scss/utils/_base.scss
@@ -92,9 +92,9 @@ input[type='text'] {
   outline: none;
 }
 
-.textarea {
+textarea {
   width: 100%;
-  min-height: 12rem;
+  min-height: 4.5rem;
   padding: 1.2rem;
 
   font-weight: $font-weight-normal;
