[ Style ] Input, Textarea hover와 focus 스타일 추가

--- a/src/assets/scss/commons/Input.scss
+++ b/src/assets/scss/commons/Input.scss
@@ -1,6 +1,9 @@
 @import 'utils/variables.scss';
 
 .input {
+  &:hover {
+    border-color: $color-orange-1;
+  }
   &:focus {
     border-color: $color-orange-1;
   }
