[ Style ]  ResultInfo 스타일 수정 및 색상관련 이슈 해결

--- a/src/assets/scss/commons/Wordbox.scss
+++ b/src/assets/scss/commons/Wordbox.scss
@@ -27,7 +27,7 @@
       width: 100%;
       padding: 1.1rem 2rem;
       color: $color-gray-2;
-      background-color: $color-gray-6;
+      background-color: $color-wordbox-background;
       font-size: $font-size-5;
     }
   }
