[ Refactor ] Textarea 스타일 변경

--- a/src/assets/scss/commons/Textarea.scss
+++ b/src/assets/scss/commons/Textarea.scss
@@ -2,6 +2,9 @@
 
 .textarea {
   display: block;
+  width: 80%;
+  margin: 0 auto;
+  min-height: 10rem;
   border-radius: 5px;
   &:hover {
     border-color: $color-orange-1;
