--- a/src/assets/scss/layouts/navbar/HeaderBar.scss
+++ b/src/assets/scss/layouts/navbar/HeaderBar.scss
@@ -7,12 +7,12 @@
   width: 100%;
   height: 6.2rem;
   background-color: $color-white;
-  border-bottom: 1px solid #f5f5f5;
+  box-shadow: 0 5px 40px rgba(0, 0, 0, 0.03);
   z-index: 100;
   &__left {
     display: flex;
     align-items: center;
-    padding-left: 2rem;
+    padding-left: 2.2rem;
     svg {
       margin-right: 1rem;
     }
