--- a/src/assets/scss/layouts/ingame/Slider.scss
+++ b/src/assets/scss/layouts/ingame/Slider.scss
@@ -1,1 +1,11 @@
 @import 'utils/variables.scss';
+@import 'utils/mixins.scss';
+
+.slider-wrap {
+  @include drag-protect();
+  background: $color-white;
+  border-radius: 2.7rem;
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.06);
+  overflow: hidden;
+  margin-bottom: 4rem;
+}
