--- a/src/assets/scss/elements/rank/RankInfo.scss
+++ b/src/assets/scss/elements/rank/RankInfo.scss
@@ -28,6 +28,8 @@
     position: relative;
     width: 100%;
     min-height: 10.8rem;
+    margin-top: 2rem;
+    margin-bottom: 1.8rem;
     padding: 2.6rem 2.2rem;
     background-color: $color-gray-0;
     border-radius: 0px 0px 10px 10px;
