--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -35,6 +35,9 @@ $color-success: #5096ff;
 
 $color-wordbox-background: #f2f2f2;
 
+// etc.
+$color-hr: #dbdbdb;
+
 // ****************
 // Font Size
 // ****************
