[ Feature ] Input hook 추가 및 style 추가

--- a/src/assets/scss/commons/Input.scss
+++ b/src/assets/scss/commons/Input.scss
@@ -1,6 +1,7 @@
 @import 'utils/variables.scss';
 
 .input {
+  background-color: $color-white;
   &:hover {
     border-color: $color-orange-1;
   }
