[ Fix ] Style hotfix

--- a/src/assets/scss/pages/Ingame.scss
+++ b/src/assets/scss/pages/Ingame.scss
@@ -1,5 +1,7 @@
 @import 'utils/variables.scss';
 
-.textwitharrow {
-  margin-bottom: 7rem;
+.ingame {
+  .textwitharrow {
+    margin-bottom: 7rem;
+  }
 }
