--- a/src/assets/scss/utils/_base.scss
+++ b/src/assets/scss/utils/_base.scss
@@ -11,11 +11,12 @@ header {
   flex-direction: column;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 1000;
 }
 
 main {
   @include nav-sliding-time;
+  margin-top: 7rem;
   padding: 4rem 1.6rem;
   z-index: -1;
   &.active {
