--- a/src/assets/scss/commons/TextWithArrow.scss
+++ b/src/assets/scss/commons/TextWithArrow.scss
@@ -5,11 +5,10 @@
   align-items: center;
   width: 100%;
   height: 1.5rem;
-  svg {
+  img {
     width: 1rem;
     height: 1rem;
     margin-right: 0.9rem;
-    line-height: 1.5rem;
   }
   p {
     font-size: $font-size-4;
