--- a/src/assets/scss/pages/Home.scss
+++ b/src/assets/scss/pages/Home.scss
@@ -14,7 +14,7 @@
       display: block;
       color: $color-gray-1;
       font-weight: $font-weight-bold;
-      font-size: $font-size-4;
+      font-size: $font-size-base;
       margin-top: 1.8rem;
       text-align: center;
       &:hover {
