--- a/src/assets/scss/layouts/navbar/HeaderBar.scss
+++ b/src/assets/scss/layouts/navbar/HeaderBar.scss
@@ -1,23 +1,25 @@
 @import 'utils/variables.scss';
 
-.headerbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 6.2rem;
-  background-color: $color-white;
-  box-shadow: 0 5px 40px rgba(0, 0, 0, 0.03);
-  z-index: 100;
-  &__left {
+.header {
+  &__inner {
     display: flex;
     align-items: center;
-    padding-left: 2.2rem;
-    svg {
-      margin-right: 1rem;
+    justify-content: space-between;
+    width: 100%;
+    height: 6.2rem;
+    padding: 0 2.2rem;
+    background-color: $color-white;
+    box-shadow: 0 5px 40px rgba(0, 0, 0, 0.03);
+  }
+  &__logo {
+    position: relative;
+    z-index: 12;
+    a {
+      display: inline-block;
     }
   }
-  &__right {
-    padding-right: 1.6rem;
+  &__menu {
+    position: relative;
+    z-index: 12;
   }
 }
