--- a/src/assets/scss/layouts/navbar/SideBar.scss
+++ b/src/assets/scss/layouts/navbar/SideBar.scss
@@ -4,13 +4,13 @@
   @include flex-column-center;
   @include nav-sliding-time;
   justify-content: space-between;
-  width: 20rem;
-  height: 100vh;
   position: absolute;
   right: 0;
-  padding-top: 6.2rem;
+  width: 20rem;
+  height: 100vh;
+  padding: 6.2rem 0 4rem;
   background-color: $color-orange-1;
-  z-index: 99;
+  z-index: 11;
   &.active {
     -webkit-transform: translateX(0);
     -ms-transform: translateX(0);
@@ -32,14 +32,17 @@
         width: 100%;
       }
       &__item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        display: inline-block;
         width: 100%;
         height: 4rem;
-        color: $color-white;
-        font-size: $font-size-3;
+        line-height: 4rem;
         font-weight: $font-weight-bold;
+        font-size: $font-size-3;
+        text-align: center;
+        color: $color-white;
+        span {
+          display: inline-block;
+        }
         &:hover {
           background-color: $color-orange-2;
         }
@@ -47,7 +50,6 @@
     }
   }
   &__bottom {
-    padding-bottom: 4rem;
     &--title {
       display: flex;
       align-items: center;
@@ -62,14 +64,14 @@
     &--items {
       @include flex-column-center;
       a {
-        cursor: pointer;
-        margin-bottom: 0.2rem;
-        color: $color-white;
         opacity: 0.5;
+        margin-bottom: 0.2rem;
         font-size: $font-size-5;
+        color: $color-white;
         line-height: 1.4rem;
+        cursor: pointer;
         &:hover {
-          color: white;
+          color: $color-white;
           opacity: 1;
         }
       }
