--- a/src/assets/scss/storybook.scss
+++ b/src/assets/scss/storybook.scss
@@ -3,7 +3,7 @@
   flex-wrap: nowrap;
   align-items: center;
   & > * {
-    margin-right: 10px;
+    margin-right: 1rem;
   }
   & > *:last-child {
     margin-right: 0;
@@ -13,6 +13,6 @@
   display: flex;
   flex-direction: column;
   & > * {
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
   }
 }
