--- a/src/assets/scss/utils/_base.scss
+++ b/src/assets/scss/utils/_base.scss
@@ -6,10 +6,10 @@ html {
 }
 header {
   display: flex;
-  top: 0;
-  left: 0;
   flex-direction: column;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 1000;
 }
@@ -18,7 +18,6 @@ main {
   @include nav-sliding-time;
   margin-top: 7rem;
   padding: 4rem 1.6rem;
-  z-index: -1;
   &.active {
     -webkit-transform: translateX(-20rem);
     -ms-transform: translateX(-20rem);
@@ -64,66 +63,56 @@ a {
 
 button {
   @include space-clear;
-  cursor: pointer;
-  padding: 8px 0;
-
   display: inline-block;
-  min-width: 3.6rem;
   width: 100%;
+  min-width: 3.6rem;
   height: 4rem;
-
+  padding: 0.8rem 0;
   color: $default-text;
-
   border-color: $default-border;
-
   background-image: initial;
-  background-color: initial;
-  background-repeat: initial;
   background-image: none;
+  background-color: initial;
   background-color: $color-white;
+  background-repeat: initial;
   background-repeat: no-repeat;
-
+  font-family: $font-stack-ko;
   font-weight: $font-weight-normal;
   font-size: $font-size-3;
-  font-family: $font-stack-ko;
-
+  text-decoration: none;
   text-align: center;
   text-indent: 0;
-  text-decoration: none;
   outline: none;
+  cursor: pointer;
 }
 
 input[type='text'] {
   @include space-clear;
-  padding: 0.8rem;
-
-  line-height: normal;
   width: 100%;
   height: 4rem;
-
-  color: $default-text;
+  padding: 0.8rem;
 
   border-top-width: initial;
   border-bottom-width: initial;
   border-right-width: initial;
   border-left-width: initial;
+  border-width: 1px;
+  border-style: solid;
   border-top-color: initial;
   border-bottom-color: initial;
   border-right-color: initial;
   border-left-color: initial;
-
-  border-width: 1px;
-  border-style: solid;
   border-color: $default-border;
   border-radius: 0.8rem;
+  border-image: initial;
+  border-image: none;
 
   font-family: $font-stack-ko;
   font-size: $font-size-4;
   font-weight: $font-weight-bold;
+  line-height: normal;
 
-  border-image: initial;
-  border-image: none;
-
+  color: $default-text;
   text-decoration: none;
   outline: none;
 }
@@ -133,21 +122,17 @@ textarea {
   width: 100%;
   min-height: 4.5rem;
   padding: 1.2rem;
-
   font-weight: $font-weight-normal;
   font-size: $font-size-4;
   font-family: $font-stack-ko;
-
+  line-height: 1.2;
+  text-decoration: none;
   color: $default-text;
-
   border-width: 1px;
   border-style: solid;
   border-color: $color-gray-4;
-
-  background: $color-white;
-  text-decoration: none;
+  background-color: $color-white;
   resize: none;
-  line-height: 1.2;
   outline: none;
 }
 
