--- a/src/assets/scss/elements/nav/BarTimer.scss
+++ b/src/assets/scss/elements/nav/BarTimer.scss
@@ -1,15 +1,15 @@
 @import 'utils/variables.scss';
 
 .bartimer {
-  height: 0.8rem;
   width: 100%;
+  height: 0.8rem;
   background-color: $color-timer-background;
   .progresstime {
     width: 0;
     height: 0.8rem;
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
     background-color: $color-orange-1;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
     transition-timing-function: linear;
   }
 }
