--- a/src/assets/scss/pages/Setting.scss
+++ b/src/assets/scss/pages/Setting.scss
@@ -3,18 +3,15 @@
 .setting {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  .text__container {
+  align-items: center;
+  &__text {
     margin-top: 2rem;
+    font-weight: $font-weight-bold;
     text-align: center;
-    p,
-    h4 {
-      font-weight: $font-weight-bold;
-    }
     &--title {
-      font-size: $font-size-4;
       margin-bottom: 1rem;
+      font-size: $font-size-4;
     }
     &--contents {
       color: $color-orange-1;
