--- a/src/assets/scss/layouts/result/ResultBackground.scss
+++ b/src/assets/scss/layouts/result/ResultBackground.scss
@@ -30,6 +30,9 @@
     &--desc {
       position: relative;
       top: 7.3rem;
+      max-width: 38rem;
+      margin: 0 auto;
+      padding: 0 1.2rem;
     }
 
     &--background {
