--- a/src/assets/scss/commons/Textarea.scss
+++ b/src/assets/scss/commons/Textarea.scss
@@ -4,7 +4,7 @@
   display: block;
   width: 80%;
   margin: 0 auto;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   &:hover {
     border-color: $color-orange-1;
   }
